@@ -97,6 +97,7 @@ require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
 require 'lobbyist/v2/handwritten_review_metrics'
 require 'lobbyist/v2/handwritten_review'
+require 'lobbyist/v2/kiosk_review'
 require 'lobbyist/v2/private_feedback_topic'
 require 'lobbyist/v2/promo'
 require 'lobbyist/v2/review_challenge'
