@@ -1,3 +1,5 @@
+* Added Kiosk Review proxy model.
+
 === 0.5.9 2014-06-11
 
 * Added Custom Invitation proxy model for V2 API.
